export const snapshot = {};

snapshot[`multilanguage plugin 1`] = `9`;

snapshot[`multilanguage plugin 2`] = `
{
  formats: [
    {
      engines: 1,
      ext: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: 1,
      ext: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
    },
    {
      engines: undefined,
      ext: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
    },
    {
      dataLoader: [AsyncFunction: json],
      engines: undefined,
      ext: ".json",
    },
    {
      engines: 1,
      ext: ".md",
      pageLoader: [AsyncFunction: text],
    },
    {
      engines: 1,
      ext: ".markdown",
      pageLoader: [AsyncFunction: text],
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".js",
    },
    {
      componentLoader: [AsyncFunction: module],
      dataLoader: [AsyncFunction: module],
      engines: 1,
      ext: ".ts",
    },
    {
      componentLoader: [AsyncFunction: text],
      engines: 1,
      ext: ".njk",
      includesPath: "_includes",
      pageLoader: [AsyncFunction: text],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yaml",
      pageLoader: [AsyncFunction: yaml],
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engines: undefined,
      ext: ".yml",
      pageLoader: [AsyncFunction: yaml],
    },
  ],
}
`;

snapshot[`multilanguage plugin 3`] = `
[
]
`;

snapshot[`multilanguage plugin 4`] = `
{
  content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="gl" href="/gl/">
</head><body><p>Hello world</p>
</body></html>',
  data: {
    alternates: [
      "en",
      "gl",
    ],
    content: "Hello world
",
    date: 1970-01-01T00:00:00.000Z,
    id: "/index",
    lang: "en",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Hello world",
    url: "/en/",
  },
  dest: {
    ext: ".html",
    path: "/en/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/index[en]",
    remote: undefined,
    slug: "index",
  },
}
`;

snapshot[`multilanguage plugin 5`] = `
{
  content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="/en/">
</head><body><p>Hello world</p>
</body></html>',
  data: {
    alternates: [
      "en",
      "gl",
    ],
    content: "Hello world
",
    date: 1970-01-01T00:00:00.000Z,
    id: "/index",
    lang: "gl",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Ola mundo",
    url: "/gl/",
  },
  dest: {
    ext: ".html",
    path: "/gl/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/index[gl]",
    remote: undefined,
    slug: "index",
  },
}
`;

snapshot[`multilanguage plugin 6`] = `
{
  content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="fr" href="/other-page-french.html">
</head><body><p>Other page</p></body></html>',
  data: {
    alternates: [
      "en",
      "fr",
    ],
    content: "<p>Other page</p>",
    date: 1970-01-01T00:00:00.000Z,
    id: "/other",
    lang: "en",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Other",
    url: "/other-page-english/",
  },
  dest: {
    ext: ".html",
    path: "/other-page-english/index",
  },
  src: {
    asset: undefined,
    ext: ".njk",
    path: "/other[en]",
    remote: undefined,
    slug: "other",
  },
}
`;

snapshot[`multilanguage plugin 7`] = `
{
  content: '<!DOCTYPE html>
<html lang="fr"><head><link rel="alternate" hreflang="en" href="/other-page-english/">
</head><body><p>Other page</p></body></html>',
  data: {
    alternates: [
      "en",
      "fr",
    ],
    content: "<p>Other page</p>",
    date: 1970-01-01T00:00:00.000Z,
    id: "/other",
    lang: "fr",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "Autre",
    url: "/other-page-french.html",
  },
  dest: {
    ext: ".html",
    path: "/other-page-french",
  },
  src: {
    asset: undefined,
    ext: ".njk",
    path: "/other[fr]",
    remote: undefined,
    slug: "other",
  },
}
`;

snapshot[`multilanguage plugin 8`] = `
{
  content: '<!DOCTYPE html>
<html lang="it"><head><link rel="alternate" hreflang="en" href="/pages/page1_en/">
<link rel="alternate" hreflang="gl" href="/pages/page1_gl/">
</head><body><p>Pagina 1</p>
</body></html>',
  data: {
    alternates: [
      "en",
      "gl",
      "it",
    ],
    content: "Pagina 1
",
    date: 1970-01-01T00:00:00.000Z,
    id: "/pages/page1",
    lang: "it",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "page-it",
    url: "/custom-italian-url/",
  },
  dest: {
    ext: ".html",
    path: "/custom-italian-url/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/pages/page1",
    remote: undefined,
    slug: "page1",
  },
}
`;

snapshot[`multilanguage plugin 9`] = `
{
  content: '<!DOCTYPE html>
<html lang="en"><head><link rel="alternate" hreflang="it" href="/custom-italian-url/">
<link rel="alternate" hreflang="gl" href="/pages/page1_gl/">
</head><body><p>Page 1</p>
</body></html>',
  data: {
    alternates: [
      "en",
      "gl",
      "it",
    ],
    content: "Page 1
",
    date: 1970-01-01T00:00:00.000Z,
    id: "/pages/page1",
    lang: "en",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "page-en",
    url: "/pages/page1_en/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page1_en/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/pages/page1_en",
    remote: undefined,
    slug: "page1_en",
  },
}
`;

snapshot[`multilanguage plugin 10`] = `
{
  content: '<!DOCTYPE html>
<html lang="gl"><head><link rel="alternate" hreflang="en" href="/pages/page1_en/">
<link rel="alternate" hreflang="it" href="/custom-italian-url/">
</head><body><p>Páxina 1</p>
</body></html>',
  data: {
    alternates: [
      "en",
      "gl",
      "it",
    ],
    content: "Páxina 1
",
    date: 1970-01-01T00:00:00.000Z,
    id: "/pages/page1",
    lang: "gl",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    search: Search {},
    tags: [
    ],
    title: "page-gl",
    url: "/pages/page1_gl/",
  },
  dest: {
    ext: ".html",
    path: "/pages/page1_gl/index",
  },
  src: {
    asset: undefined,
    ext: ".md",
    path: "/pages/page1_gl",
    remote: undefined,
    slug: "page1_gl",
  },
}
`;

snapshot[`multilanguage plugin 11`] = `
{
  content: "<!DOCTYPE html>
<html><head></head><body><nav>

</nav>

  <li>Ola mundo</li>

  <li>page-gl</li>

</body></html>",
  data: {
    alternates: [
    ],
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    id: "page-1",
    layout: "layout.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: null,
      page: 1,
      previous: null,
      totalPages: 1,
      totalResults: 2,
    },
    results: 2,
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/pagination[0]",
    remote: undefined,
    slug: "pagination",
  },
}
`;

snapshot[`multilanguage plugin 12`] = `
{
  content: "<!DOCTYPE html>
<html><head></head><body><nav>

</nav>

  <li>Hello world</li>

  <li>Other</li>

  <li>page-en</li>

</body></html>",
  data: {
    alternates: [
    ],
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    id: "page-1",
    layout: "layout.njk",
    mergedKeys: {
      tags: "stringArray",
    },
    page: undefined,
    paginate: [Function: paginate],
    pagination: {
      next: null,
      page: 1,
      previous: null,
      totalPages: 1,
      totalResults: 3,
    },
    results: 3,
    search: Search {},
    tags: [
    ],
    url: "/page-1/",
  },
  dest: {
    ext: ".html",
    path: "/page-1/index",
  },
  src: {
    asset: undefined,
    ext: ".tmpl.js",
    path: "/pagination[1]",
    remote: undefined,
    slug: "pagination",
  },
}
`;
